# KeySurf

./: .gitignore  CMakeLists.txt
include/: glyph.h  track.h  word.h
src/: glyph.cpp  track.cpp  word.cpp
tests/: CMakeLists.txt
